--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,26 @@
 {
-    "extends": "airbnb",
-    "rules": {
-        "quotes": ["warn", "double"]
+    "extends": [
+      "airbnb",
+      "plugin:@typescript-eslint/recommended"
+    ],
+    "plugins": [
+        "@typescript-eslint"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "settings": {
+        "import/resolver": {
+          "node": {
+            "extensions": [".js", ".jsx", ".ts", ".tsx"]
+          }
+        }
+      },
+      "rules": {
+        "react/jsx-filename-extension": ["error", { "extensions": ["jsx", "tsx"] }],
+        "import/extensions": "off",
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": "error",
+        "@typescript-eslint/explicit-function-return-type": "off",
+        "quotes": ["warn", "double"],
+        "operator-linebreak": ["warn", "none", {"overrides": { "=": "after" } }]
     }
 }
