--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "@types/react-helmet": "^5.0.15",
     "gatsby": "^2.19.7",
+    "gatsby-plugin-react-helmet": "^3.1.23",
+    "gatsby-plugin-sass": "^2.1.30",
+    "gatsby-plugin-typescript": "^2.2.2",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "gatsby-plugin-react-helmet": "^3.1.23",
-    "gatsby-plugin-typescript": "^2.2.2",
     "react-helmet": "^5.2.1",
     "typescript": "^3.8.3"
   },
