--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@types/react-helmet": "^5.0.15",
     "gatsby": "^2.19.7",
     "gatsby-plugin-react-helmet": "^3.1.23",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^2.1.30",
     "gatsby-plugin-typescript": "^2.2.2",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "svgo": "^1.3.2",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
